# DFR_CVC_2019

./: .cproject  .gitignore  .project_org  CMakeLists.txt  DFR_CVC_Test  LinkerScript.ld  README.md  conanfile.txt  dfr_cvc Debug.cfg
.github/workflows/: cmake.yml
Applications/: bamocar.c  charger.c  cvc_can.c  cvc_can.h  cvc_logging.c  cvc_pwm.c  cvc_sara.c  cvc_sd.c  cvc_serial.c  cvc_spi.c  cvc_state_machine.c  cvc_tasks.c  cvc_tim.c  cvc_usbh.c  dash.c  demo.c  hal_msp.c  ice.c  main.c  motec.c  pm100.c  stm32f7xx_it.c  synchronous.c  syscalls.c  torque_command.c
Applications/inc/: FreeRTOSConfig.h  bamocar.h  charger.h  cvc_can.h  cvc_config.h  cvc_logging.h  cvc_pwm.h  cvc_sara.h  cvc_sd.h  cvc_serial.h  cvc_spi.h  cvc_state_machine.h  cvc_tasks.h  cvc_tim.h  cvc_usbh.h  dash.h  demo.h  ffconf.h  ice.h  main.h  motec.h  pm100.h  stm32f7xx_it.h  synchronous.h  torque_command.h  usbh_conf.h
Common/: TrivialClass.hpp
Debug/: .gitignore  dfr_cvc.elf  makefile  objects.list  output.map  sources.mk
Debug/Applications/: bamocar.d  cvc_can.d  cvc_logging.d  cvc_sd.d  cvc_spi.d  cvc_tasks.d  demo.d  main.d  stm32f7xx_it.d  subdir.mk  syscalls.d  system_stm32f7xx.d
Debug/src/: main.d  stm32f7xx_it.d  subdir.mk  system_stm32f7xx.d
Debug/startup/: subdir.mk
Doc/: dfr_cvc.doxyfile
Drivers/HAL_Driver/: .STM32F733xx_User_Manual.chm.icloud  .STM32F745xx_User_Manual.chm.icloud  .STM32F746xx_User_Manual.chm.icloud  .STM32F756xx_User_Manual.chm.icloud  .STM32F779xx_User_Manual.chm.icloud  Release_Notes.html
Testing/: test_main.cpp
startup/: startup_stm32f767xx.s
(+298 files in other folders)
